creusot/tests/should_fail/prusti/calls/cur_fin.stderr
error[creusot]: &'curr mut X@'x cannot be moved to 'curr since it isn't copy
                caused by function call
  --> cur_fin.rs:13:9
   |
13 |     cur(x)
   |         ^

error: aborting due to previous error

